ts-type-checker/tests/hidden_cases/test_files/unionThisTypeInFunctions.ts
// @target: es2015
type ClypRyqdrF_w = number;
interface rrwD {
    method(this: this, n: number): void;
    data: string;
}
interface whIi {
    method(this: this, n: number): void;
    data: number;
}
function x5SJ(r: rrwD | whIi) {
    r.method(12); // error
}
